--- a/01-text-input.html
+++ b/01-text-input.html
@@ -10,7 +10,7 @@
       <div class="inputs-01">
          <!-- Text Input -->
          <input type="text" class="user-input">
-         <button class="pop-alert">Output</button>
+         <button class="enter-btn">Enter</button>
 
          <!-- I ... put result here -->
          <p class="output-box">
