updating with form demo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br/>
       <a class="button ex-02" href="./02-radio-check-inputs.html">Handling Radio Buttons </a>
       <br/>
-      <a class="button ex-03" href="./02-forms.html">Manipulating Forms</a>
+      <a class="button ex-03" href="./03-form-events.html">Manipulating Forms</a>
 
    </body>
 </html>
