adding comments for 03

--- a/03-form-events.html
+++ b/03-form-events.html
@@ -13,6 +13,7 @@
          <label for="username">
            Username :
            <br/>
+           <!-- NOTE: we access value in javascript with 'name' property -->
            <input type="text" name="username">
          </label>
        </div>
